--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+a{
+  display: inline-flex;
+  border: 1px solid ;
+  padding: 5px;
+  background-color: coral;
+}
